# Bind

./: .clang-format  .clang-tidy  .gitignore  Bind.code-workspace  CMakeLists.txt  CMakePresets.json  PapyrusProject.ppj  README.md  plugin copy.cpp  plugin.cpp  vcpkg-configuration.json  vcpkg.json  xmake.lua
Fonts/: Attribution.txt
Images/: Attribution.txt  BIND_v2_LOGO.xcf  Logo.xcf
Scripts/: AutoBindToGeneratedObject.pex  AutoBindToGeneratedQuest.pex  AutoBindToPlayer.pex  BindMeToGenObjectEditorIDWithEditorID.pex  BindMeToGenObjectFormIDWithEditorID.pex  BindMeToGeneratedObject.pex  BindMeToGeneratedObjectEditorID.pex  BindMeToGeneratedObjectFormID.pex  BindMeToGeneratedQuest.pex  BindMeToGeneratedQuestWithName.pex  BindMeToHodByEditorID.pex  BindMeToHodByID.pex  BindMeToMultipleTargets.pex  BindMeToPlayer.pex  DocStringBindToHod.pex  DocStringBindToMultipleTargets.pex  DocStringBindToNPCs.pex  DocStringBindToPlayer.pex
Scripts/Bindings/: BindExamples.sh
Scripts/Source/: AutoBindToGeneratedObject.psc  AutoBindToGeneratedQuest.psc  AutoBindToPlayer.psc  BindMeToGenObjectEditorIDWithEditorID.psc  BindMeToGenObjectFormIDWithEditorID.psc  BindMeToGeneratedObject.psc  BindMeToGeneratedObjectEditorID.psc  BindMeToGeneratedObjectFormID.psc  BindMeToGeneratedQuest.psc  BindMeToGeneratedQuestWithName.psc  BindMeToHodByEditorID.psc  BindMeToHodByID.psc  BindMeToMultipleTargets.psc  BindMeToPlayer.psc  DocStringBindToHod.psc  DocStringBindToMultipleTargets.psc  DocStringBindToNPCs.psc  DocStringBindToPlayer.psc  _Bind_Actor_Player.psc  (+12 more)
spec/: CMakeLists.txt  ExpectedOutput.txt  TestExpectedOutput.cpp
(+17 files in other folders)
